# attack-on-medvqa

./: .gitignore  README.md  pyproject.toml
result/: pgd_loss.csv  pgd_result.csv
